Complete Day 7 immutability lineage and fault tolerance